--- a/step-3/.gitignore
+++ b/step-3/.gitignore
@@ -11,7 +11,6 @@ external_links.html
 geography.html
 history.html
 international_relations.html
-introduction.html
 olympic_games.html
 other_locations_named_after_athens.html
 references.html
@@ -22,3 +21,6 @@ files.zip
 semantic_book.epub
 athens_files
 *.log
+node_modules/
+out/
+nif/
